--- a/Editor/scenehistorian/scenehistorian.asmdef
+++ b/Editor/scenehistorian/scenehistorian.asmdef
@@ -1,12 +1,12 @@
 {
     "name": "scenehistorian",
+    "rootNamespace": "",
     "references": [
         "mulova.commons",
         "mulova.unicore",
         "mulova.unicore.editor",
         "reorderablelist"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -14,6 +14,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": []
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
